[tool.poetry]
name = "test-template"
version = "0.1.0"
description = ""
authors = ["mark1002 <mark.chang@mile.cloud>"]

[tool.poetry.dependencies]
python = "^3.8.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*:DeprecationWarning"
]
